--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       uses: cachix/install-nix-action@v12
       with:
         nix_path: nixpkgs=channel:nixos-unstable
-      
+
     - name: Run Nix tests
       run: nix-instantiate --eval "test"
 
     - name: Build in shell
-      run: nix-shell --run "dub test"
+      run: nix-shell --pure --run "dub test"
